# simp-grammar

./: .gitignore  CMakeLists.txt  Makefile  README.md  basic.peg  main.c  notes.md  parser.y  scanner.h  scanner.l  simple.c  simple.h  simple.peg  test.in  test1.in  test5.in
old/: main.c
tests/: empty_file.tmp  func_body_for.simp  func_body_for.tmp  func_body_if.tmp  func_body_misc.tmp  func_body_switch.tmp  func_body_try.tmp  func_body_while.tmp  func_definition.tmp  funcs1.tmp  funcs10.tmp  funcs11.tmp  funcs2.tmp  funcs3.tmp  funcs4.tmp  funcs5.tmp  funcs6.tmp  funcs7.tmp  funcs8.tmp  funcs9.tmp  gcd.tmp  graph.tmp  main.tmp  module.tmp  namespace1.tmp  primes.tmp  recursion.tmp  rsa_algo.tmp  struct.tmp  structs1.tmp  structs2.tmp  structs3.tmp  structs4.tmp  structs5.tmp  structs6.tmp  structs7.tmp  structs8.tmp  symbol_table.tmp  tree.tmp
